plugins {
  id 'java'
  id 'kotlin'
  id 'application'
  id 'com.github.johnrengelman.shadow' version '4.0.4'
}

mainClassName = 'dcl.Flesh'
group 'io.github.rxcmr'
version '1.4.4'

sourceCompatibility = 13

dependencies {
  implementation group: "net.dv8tion", name: "JDA", version: "4.0.0_59"
  implementation group: "io.github.cdimascio", name: "java-dotenv", version: "5.1.3"
  implementation group: "ch.qos.logback", name: "logback-classic", version: "1.3.0-alpha4"
  implementation group: "org.slf4j", name: "slf4j-api", version: "2.0.0-alpha1"
  implementation group: "com.jagrosh", name: "jda-utilities", version: "3.0.2"
  implementation group: "com.sedmelluq", name: "lavaplayer", version: "1.3.25"
  implementation group: "com.squareup.okhttp3", name: "okhttp", version: "4.2.2"
  implementation group: "org.codehaus.groovy", name: "groovy", version: "3.0.0-rc-1"
  implementation group: "io.github.classgraph", name: "classgraph", version: "4.8.53"
  implementation group: "org.apache.commons", name: "commons-text", version: "1.8"
  implementation group: "org.apache.commons", name: "commons-lang3", version: "3.9"
}

repositories {
    jcenter()
    mavenCentral()
}

defaultTasks "afterBuild"

task(afterBuild, dependsOn: 'classes', type: JavaExec) {
   main = mainClassName
   classpath = sourceSets.main.runtimeClasspath
}

compileJava.options.encoding = 'UTF-8'
